<resources>
    <string name="app_name">J2W</string>
    <string name="title_main_activity">Vacantes</string>
    <string name="search_menu_main_activity">Buscar</string>
    <string name="action_preview">Previsualizar</string>
    <string name="title_activity_data">Mis datos</string>
    <string name="title_activity_photo">Foto de Perfil</string>
    <string name="photo_profile_activity_photo">Foto de perfil</string>
    <string name="select_photo_activity_photo">Seleccionar foto</string>
    <string name="take_photo_activity_photo">Tomar foto</string>
    <string name="photo_profile_deleted_activity_photo">Foto de perfil eliminada</string>
    <string name="error_selected_photo">Ocurrio un error al procesar la foto que seleccionaste. Intenta con la galeria de Android.</string>
    <string name="error_croped_photo">Ocurrio un error al recortar la foto que seleccionaste. Intenta con la galeria de Android.</string>
    <string name="title_activity_general">Generales</string>
    <string name="header_basic_data_activity_general">Datos básicos</string>
    <string name="header_contact_data_activity_general">Datos de contacto</string>
    <string name="header_address_data_activity_general">Datos de domicilio</string>
    <string name="subheader_genre_activity_general">Género*</string>
    <string name="subheader_living_with">Vives con*</string>
    <string name="subheader_civil_status_activity_general">Estado civil*</string>
    <string name="subheader_state_activity_general">Estado*</string>
    <string name="subheader_municipality_activity_general">Municipio*</string>
    <string name="name_activity_general">Nombre(s)*</string>
    <string name="last_name_activity_general">Apellido paterno*</string>
    <string name="middle_name_activity_general">Apellido materno</string>
    <string name="birth_date_activity_general">Fecha de nacimiento*</string>
    <string name="age_activity_general">Edad</string>
    <string name="man_activity_general">Hombre</string>
    <string name="woman_activity_general">Mujer</string>
    <string name="father_activity_general">Padres</string>
    <string name="family_activity_general">Familiares</string>
    <string name="parents_activity_general">Parientes</string>
    <string name="alone_activity_general">Solo(a)</string>
    <string name="single_activity_general">Soltero(a)</string>
    <string name="married_activity_general">Casado(a)</string>
    <string name="divorced_activity_general">Divorciado(a)</string>
    <string name="widower_activity_general">Viudo(a)</string>
    <string name="free_union_activity_general">Unión libre</string>
    <string name="phone_activity_general">Teléfono*</string>
    <string name="email_activity_general">Correo electrónico*</string>
    <string name="street_activity_general">Calle y número</string>
    <string name="colony_activity_general">Colonia</string>
    <string name="zip_code_activity_general">Código postal</string>
    <string name="error_email_activity_general">Email no válido</string>
    <string name="error_genre_field">Selecciona un género</string>
    <string name="error_livin_with">Selecciona con quien vives</string>
    <string name="error_civil_status">Selecciona un estado civil</string>
    <string name="error_state_general">Selecciona un estado</string>
    <string name="error_municipality_general">Selecciona un municipio</string>
    <string name="title_activity_documentation">Documentación</string>
    <string name="driver_license_documentation">Licencia de conducir</string>
    <string name="curp_documentation">C.U.R.P.*</string>
    <string name="rfc_documentation">R.F.C.</string>
    <string name="error_curp_documentation">Curp no válida</string>
    <string name="title_activity_studies_done">Estudios Realizados</string>
    <string name="action_add">Agregar nuevo</string>
    <string name="title_activity_study_done">Estudio Realizado</string>
    <string name="level_academic_studies_done">Nivel académico*</string>
    <string name="course_studies_done">Curso o especialidad*</string>
    <string name="institute_studies_done">Escuela o institución*</string>
    <string name="start_date_studies_done">Fecha de inicio*</string>
    <string name="end_date_studies_done">Fecha de fin*</string>
    <string name="title_recived_studies_done">Título recibido*</string>
    <string name="error_academic_level">Por favor selecciona un nivel académico</string>
    <string name="error_title">Por favor selecciona el título recibido</string>
    <string name="title_activity_current_studies">Estudios Actuales</string>
    <string name="title_activity_current_study">Estudio Actual</string>
    <string name="title_schedule">Horario</string>
    <string name="schedule_days">Días</string>
    <string name="schedule_hour_start">Hora de inicio</string>
    <string name="schedule_hour_end">Hora de fin</string>
    <string name="monday">L</string>
    <string name="tuesday">M</string>
    <string name="wednesday">M</string>
    <string name="thursday">J</string>
    <string name="friday">V</string>
    <string name="saturday">S</string>
    <string name="sunday">D</string>
    <string name="grade_modality">Modalidad*</string>
    <string name="grade">Grado*</string>
    <string name="error_grade">Por favor selecciona un grado</string>
    <string name="error_modality">Por favor selecciona una modalidad</string>
    <string name="title_activity_knowledge">Conocimientos</string>
    <string name="title_activity_skill_detail">Conocimientos</string>
    <string name="subtitle_activity_knowledge">y habilidades</string>
    <string name="title_activity_knowledge_detail">Conocimiento</string>
    <string name="subtitle_activity_knowledge_detail">o habilidad</string>
    <string name="title_knowledge">Conocimiento o Habilidad:*</string>
    <string name="title_activity_work_experiences">Experiencias</string>
    <string name="subtitle_activity_work_experiences">Laboral</string>
    <string name="type_experience">Tipo de experiencia*</string>
    <string name="institute_or_enterprise">Empresa o institución:*</string>
    <string name="job_title">Puesto:*</string>
    <string name="title_activity_work_experience">Experiencia</string>
    <string name="error_type_experience">Debe seleccionar un tipo de experiencia</string>
    <string name="title_activity_references">Referencias</string>
    <string name="title_activity_reference">Referencia</string>
    <string name="name_reference">Nombre completo:*</string>
    <string name="job_title_reference">Ocupación:*</string>
    <string name="time_of_meeting">Tiempo de conocerlo*</string>
    <string name="helper_time_meeting">Escriba un número</string>
    <string name="error_type_meet">Selecciona una opción de tiempo</string>
    <string name="title_activity_vacancy">Vacante</string>
    <string name="about_vacancy">Acerca de la vacante</string>
    <string name="contact_data">Datos de contacto</string>
    <string name="description_vacancy">Descripción</string>
    <string name="skills_vacancy">Habilidades</string>
    <string name="knowledge_vacancy">Conocimientos</string>
    <string name="benefits_vacancy">Beneficios</string>
    <string name="experience_vacancy">Experiencia</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="about_account">Acerca de tu cuenta</string>
    <string name="username">Nombre de usuario:</string>
    <string name="current_password">Contraseña actual:*</string>
    <string name="new_password">Nueva contraseña:*</string>
    <string name="repeat_password">Repite contraseña:*</string>
    <string name="about_vacancies">Acerca de las vacantes</string>
    <string name="update_each">Actualizar cada que pase:*</string>
    <string name="delete_each">Eliminar cada que pase:*</string>
    <string name="about_document">Acerca de la solicitud</string>
    <string name="background_color">Color de fondo:*</string>
    <string name="beige_color">Beige</string>
    <string name="white_color">Blanco</string>
    <string name="company_name">Jamp2Work</string>
    <string name="company_email">info@jamp2work.com</string>
    <string name="version_app">v0.1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="delete">Eliminar</string>
    <string name="help">Ayuda</string>
    <string name="help_title">Recomendaciones</string>
    <string name="help_photo_activity">La foto de perfil es sumamente importante al generar tu
        solicitud, sin ella tu solicitud no tendría una identidad. No se podrá crear una solicitud
        sin una foto, selecciona o toma una.</string>
    <string name="help_general_activity">Tus datos básicos son importantes para poder organizar una
        entrevista con la empresa en la que te gustaría laborar. No olvides que los campos marcados
        con un * son obligatorios.</string>
    <string name="help_documentation_activity">Los siguientes datos son importantes para un reclutador,
         con ellos podrá darte de alta las prestaciones ofrecidas. No olvides que los campos marcados
        con un * son obligatorios.</string>
    <string name="help_study_done_activity">Los siguientes datos son importantes para describir tu preparación,
         con ellos podrás competir por una oportunidad de empleo. No olvides que los campos marcados
        con un * son obligatorios.</string>
    <string name="help_current_study_activity">Los siguientes datos son importantes para indicar tus cursos actuales,
         con ellos los reclutadores podrán contemplar un mejor horario para ti. No olvides que los campos marcados
        con un * son obligatorios.</string>
    <string name="help_skills_activity">Agrega tus habilidades y conocimientos para destacar entre los solicitantes, entre más
        tengas, mayor oportunidad tendrás. Ser honesto y claro es muy importante. No olvides que los campos marcados
        con un * son obligatorios.</string>
    <string name="help_profile_activity">Selecciona las opciones que más te convengan en las siguientes configuraciones.
        \nTambién puedes cambiar tu contraseña cuando lo desees.</string>
    <string name="save_action">Guardar</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="success_save">Datos guardados exitosamente</string>
    <string name="error_save">Error al guardar los datos</string>
    <string name="error_load_data">Error al cargar los datos</string>
    <string name="success_delete">Eliminado correctamente</string>
    <string name="error_delete">Error al tratar de eliminar el elemento</string>
    <string name="image_description">La imagen no se ha podido cargar</string>
    <string name="action_call">Llamar</string>
    <string name="action_send">Enviar</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>