<RelativeLayout
    android:background="@color/background_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nahtredn.adso.GeneralActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_padding"
        android:layout_above="@id/adViewGeneral">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/header_basic_data_activity_general"
                style="@style/textHeader"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_input_name_general">

                <EditText
                    style="@style/commonInput"
                    android:hint="@string/name_activity_general"
                    android:inputType="textCapWords"
                    android:id="@+id/input_name_general"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_input_last_name_general">

                <EditText
                    style="@style/commonInput"
                    android:hint="@string/last_name_activity_general"
                    android:inputType="textCapWords"
                    android:id="@+id/input_last_name_general"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_input_middle_name_general">

                <EditText
                    style="@style/commonInput"
                    android:hint="@string/middle_name_activity_general"
                    android:inputType="textCapWords"
                    android:id="@+id/input_middle_name_general"/>

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_date_picker"
                    style="@style/datePickerButton"
                    android:contentDescription="@string/birth_date_activity_general"
                    android:onClick="onClicBirthDate"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_input_birth_date_general"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_toStartOf="@+id/btn_date_picker">

                    <EditText
                        android:id="@+id/input_birth_date_general"
                        style="@style/commonInput"
                        android:enabled="false"
                        android:hint="@string/birth_date_activity_general"
                        android:inputType="date" />

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_input_age_general">

                <EditText
                    style="@style/commonInput"
                    android:hint="@string/age_activity_general"
                    android:inputType="textCapWords"
                    android:enabled="false"
                    android:id="@+id/input_age_general"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/textSubtitle"
                android:text="@string/subheader_genre_activity_general"/>

            <RadioGroup
                android:id="@+id/radio_group_genre_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radio_man_general"
                    style="@style/commonRadioButton"
                    android:text="@string/man_activity_general"
                    android:onClick="onClicRadioButtonGenreGeneral"/>

                <RadioButton
                    android:id="@+id/radio_woman_general"
                    style="@style/commonRadioButton"
                    android:text="@string/woman_activity_general"
                    android:onClick="onClicRadioButtonGenreGeneral"/>
            </RadioGroup>

            <TextView
                style="@style/textSubtitle"
                android:text="@string/subheader_living_with"/>

            <RadioGroup
                android:id="@+id/radio_group_living_with_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <RadioButton
                    style="@style/commonRadioButton"
                    android:text="@string/father_activity_general"
                    android:onClick="onClicRadioButtonLivingWithGeneral"
                    android:id="@+id/radio_button_fhater_general"/>

                <RadioButton
                    style="@style/commonRadioButton"
                    android:text="@string/family_activity_general"
                    android:onClick="onClicRadioButtonLivingWithGeneral"
                    android:id="@+id/radio_button_family_general"/>

                <RadioButton
                    style="@style/commonRadioButton"
                    android:text="@string/parents_activity_general"
                    android:onClick="onClicRadioButtonLivingWithGeneral"
                    android:id="@+id/radio_button_parents_general"/>

                <RadioButton
                    style="@style/commonRadioButton"
                    android:text="@string/alone_activity_general"
                    android:onClick="onClicRadioButtonLivingWithGeneral"
                    android:id="@+id/radio_button_alone_general"/>

            </RadioGroup>

            <TextView
                style="@style/textSubtitle"
                android:text="@string/subheader_civil_status_activity_general"/>

            <RadioGroup
                android:id="@+id/radio_group_civil_status_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <RadioButton
                    style="@style/commonRadioButton"
                    android:text="@string/single_activity_general"
                    android:onClick="onClicRadioButtonCivilStatusGeneral"
                    android:id="@+id/radio_button_single_general"/>

                <RadioButton
                    style="@style/commonRadioButton"
                    android:text="@string/married_activity_general"
                    android:onClick="onClicRadioButtonCivilStatusGeneral"
                    android:id="@+id/radio_button_married_general"/>

                <RadioButton
                    style="@style/commonRadioButton"
                    android:text="@string/divorced_activity_general"
                    android:onClick="onClicRadioButtonCivilStatusGeneral"
                    android:id="@+id/radio_button_divorced_general"/>

                <RadioButton
                    style="@style/commonRadioButton"
                    android:text="@string/widower_activity_general"
                    android:onClick="onClicRadioButtonCivilStatusGeneral"
                    android:id="@+id/radio_button_widower_general"/>

                <RadioButton
                    style="@style/commonRadioButton"
                    android:text="@string/free_union_activity_general"
                    android:onClick="onClicRadioButtonCivilStatusGeneral"
                    android:id="@+id/radio_button_free_union_general"/>

            </RadioGroup>

            <TextView
                style="@style/textHeader"
                android:text="@string/header_contact_data_activity_general"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_input_phone_general">

                <EditText
                    style="@style/commonInput"
                    android:hint="@string/phone_activity_general"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:id="@+id/input_phone_general"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_input_email_general">

                <EditText
                    style="@style/commonInput"
                    android:hint="@string/email_activity_general"
                    android:inputType="textEmailAddress"
                    android:id="@+id/input_email_general"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/textHeader"
                android:text="@string/header_address_data_activity_general"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_input_street_general">

                <EditText
                    style="@style/commonInput"
                    android:hint="@string/street_activity_general"
                    android:inputType="textCapWords"
                    android:id="@+id/input_street_general"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_input_colony_general">

                <EditText
                    style="@style/commonInput"
                    android:hint="@string/colony_activity_general"
                    android:inputType="textCapWords"
                    android:id="@+id/input_colony_general"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_input_zip_code_general">

                <EditText
                    style="@style/commonInput"
                    android:hint="@string/zip_code_activity_general"
                    android:inputType="number"
                    android:maxLength="5"
                    android:id="@+id/input_zip_code_general"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/textSubtitle"
                android:text="@string/subheader_state_activity_general"/>

            <Spinner
                android:entries="@array/states"
                style="@style/commonSpinner"
                android:id="@+id/spinner_states_activity_general">

            </Spinner>

            <TextView
                style="@style/textSubtitle"
                android:text="@string/subheader_municipality_activity_general"/>

            <Spinner
                style="@style/commonSpinner"
                android:id="@+id/spinner_municipality_activity_general"
                android:entries="@array/common_municipality">

            </Spinner>

            <Button
                android:onClick="onClicSaveGeneralActivity"
                style="@style/commonButton"
                android:text="@string/save_action"
                android:id="@+id/btn_save_documentation"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
