<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nahtredn.adso.ReferenceActivity"
    android:background="@color/background_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_padding"
        android:layout_above="@id/adViewReference"
        android:layout_margin="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/header_basic_data_activity_general"
                style="@style/textHeader"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_input_name_reference">

                <EditText
                    style="@style/commonInput"
                    android:hint="@string/name_reference"
                    android:inputType="textCapWords"
                    android:id="@+id/input_name_reference"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_input_job_title_reference">

                <EditText
                    style="@style/commonInput"
                    android:hint="@string/job_title_reference"
                    android:inputType="textCapWords"
                    android:id="@+id/input_job_title_reference"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/time_of_meeting"
                style="@style/textSubtitle"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_input_time_meeting">

                <EditText
                    style="@style/commonInput"
                    android:hint="@string/helper_time_meeting"
                    android:inputType="number"
                    android:id="@+id/input_time_meeting"/>

            </android.support.design.widget.TextInputLayout>

            <Spinner
                style="@style/commonSpinner"
                android:id="@+id/spinner_type_time_meeting"
                android:entries="@array/type_time_meeting_options"/>

            <TextView
                android:text="@string/header_address_data_activity_general"
                style="@style/textHeader"/>

            <TextView
                style="@style/textSubtitle"
                android:text="@string/subheader_state_activity_general"/>

            <Spinner
                android:entries="@array/states"
                style="@style/commonSpinner"
                android:id="@+id/spinner_states_reference">

            </Spinner>

            <TextView
                style="@style/textSubtitle"
                android:text="@string/subheader_municipality_activity_general"/>

            <Spinner
                style="@style/commonSpinner"
                android:id="@+id/spinner_municipality_reference"
                android:entries="@array/common_municipality"/>

            <TextView
                android:text="@string/header_contact_data_activity_general"
                style="@style/textHeader"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_input_phone_reference">

                <EditText
                    style="@style/commonInput"
                    android:hint="@string/phone_activity_general"
                    android:inputType="phone"
                    android:id="@+id/input_phone_reference"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:onClick="onClicSaveReference"
                style="@style/commonButton"
                android:text="@string/save_action"
                android:id="@+id/btn_save_documentation"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewReference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
